src/test/deca/syntax/invalid/sansobjet/Infeq1.deca
//Infeq1.deca:5:11: mismatched input ';' expecting 
//Description:  inf sans droite
//Resultat: Erreur ligne 5
{
    12 <=  ;
}
